--- a/src/placeholder.html
+++ b/src/placeholder.html
@@ -1,9 +1,11 @@
 <DOCTYPE! html>
+<html>
     <head>
         <meta charset="utf-8"/>
         <title>
             Placeholder: the Game
         </title>
+        <script type="text/javascript" src="./jquery.min.js"></script>
         <script type="text/javascript" src="./placeholder.js"></script>
     </head>
     <body>
