--- a/src/placeholder.html
+++ b/src/placeholder.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="./placeholder.js"></script>
     </head>
     <body>
-        <div id="game-window">
+        <div id="game-window" style="font-family:'Courier'; line-height:0%;" >
         </div>
     </body>
 </html>
